--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   </head>
   <body>
     <main>
-      <div class="container">
+      <div class="container" color="">
         <div class="avatar">
           <span>
             <img src="images/build.svg" alt="Selo Rocketseat" />
